--- a/style.css
+++ b/style.css
@@ -19,11 +19,6 @@ header {
     padding: 10px 200px;
 }
 
-/* 
-.navigation {
-    display: flex;
-} */
-
 .logo {
     text-decoration: none;
     font-weight: 700;
@@ -61,7 +56,7 @@ section {
 }
 
 .main h2 {
-    color: #fff;
+    color: #000;
     font-size: 1.4em;
     font-weight: 500;
 }
@@ -75,7 +70,7 @@ section {
 }
 
 .main h3 {
-    color: #fff;
+    color: #000;
     font-size: 2em;
     font-weight: 700;
     letter-spacing: 1px;
