--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ section {
 }
 
 .main h2 {
-    color: white;
+    color: #FFFFFF;
     font-size: 1.4em;
     font-weight: 500;
 }
@@ -70,7 +70,7 @@ section {
 }
 
 .main h3 {
-    color: white;
+    color: #FFFFFF;
     font-size: 2em;
     font-weight: 700;
     letter-spacing: 1px;
